# claude-fullstack-starter

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.en.md  README.md  SECURITY.md
.claude/skills/add-api-endpoint/: SKILL.md
.claude/skills/add-auth/: SKILL.md
.claude/skills/add-e2e-test/: SKILL.md
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: check_docs_skills.py
.github/workflows/: block-sandbox-pr.yml  ci.yml  devcontainer-ci.yml  docs-skills-ci.yml  freshness.yml  release.yml  sandbox-ci.yml
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f5ff094a7356_initial_accounting_schema.py
backend/app/: config.py  db.py  main.py  store.py
backend/app/api/: __init__.py  accounts.py  calc.py  cash_book.py  closing.py  expenses.py  export.py  fixed_assets.py  hello.py  imports.py  journal.py  receivables.py  reports.py  tax.py  vouchers.py  year_end.py
backend/app/domain/: accounts.py  fixed_assets.py  imports.py  journal.py  voucher.py
backend/app/services/: account_suggester.py  csv_import.py  depreciation.py  tax_calc.py
backend/tests/: test_accounting.py  test_calc.py  test_hello.py  test_persistence.py  test_phase2.py  test_phase3.py  test_phase4.py  test_receivables_expenses.py
docs/: README.en.md  README.md  architecture.en.md  architecture.md  development-process.en.md  development-process.md  rulesets-setup.en.md  rulesets-setup.md  switch-to-app-development.en.md  switch-to-app-development.md
docs/accounting/: 00-overall-basic-design.md  README.md
docs/images/: overview-slide.html
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/e2e/: accounting.spec.ts  features.spec.ts
frontend/src/: App.vue  main.ts  style.css
(+63 files in other folders)
