[project]
name = "backend"
version = "0.0.2"
description = "FastAPI backend"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.49.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.1.1",
  "pytest-asyncio>=0.24",
  "httpx>=0.28.1",
  "ruff>=0.15.20",
  "mypy>=2.1.0",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "D"]
# モジュール/パッケージ/__init__ の docstring は必須にしない (低価値なため)
# D400/D415 は日本語の句点「。」を終止符と認識しないため除外 (docstring は日本語)
ignore = ["D100", "D104", "D107", "D400", "D415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
